tests/ui/issues/issue-27942.stderr
error[E0308]: mismatched types
  --> $DIR/issue-27942.rs:7:25
   |
LL |     fn select(&self) -> BufferViewHandle<R>;
   |                         ^^^^^^^^^^^^^^^^^^^ lifetime mismatch
   |
   = note: expected trait `Resources<'_>`
              found trait `Resources<'a>`
note: the lifetime `'a` as defined here...
  --> $DIR/issue-27942.rs:5:18
   |
LL | pub trait Buffer<'a, R: Resources<'a>> {
   |                  ^^
note: ...does not necessarily outlive the anonymous lifetime defined here
  --> $DIR/issue-27942.rs:7:15
   |
LL |     fn select(&self) -> BufferViewHandle<R>;
   |               ^^^^^

error[E0308]: mismatched types
  --> $DIR/issue-27942.rs:7:25
   |
LL |     fn select(&self) -> BufferViewHandle<R>;
   |                         ^^^^^^^^^^^^^^^^^^^ lifetime mismatch
   |
   = note: expected trait `Resources<'_>`
              found trait `Resources<'a>`
note: the anonymous lifetime defined here...
  --> $DIR/issue-27942.rs:7:15
   |
LL |     fn select(&self) -> BufferViewHandle<R>;
   |               ^^^^^
note: ...does not necessarily outlive the lifetime `'a` as defined here
  --> $DIR/issue-27942.rs:5:18
   |
LL | pub trait Buffer<'a, R: Resources<'a>> {
   |                  ^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
